--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource-variable/montserrat": "^5.0.19",
     "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.32.0",
-    "drizzle-orm-pg": "^0.16.3",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
