--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource-variable/montserrat": "^5.0.19",
+    "@fontsource/montserrat": "^5.0.19",
     "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.32.0",
     "next": "14.2.5",
@@ -17,6 +17,7 @@
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.4",
     "styled-components": "^6.1.11",
     "vercel": "^35.0.3"
   },
